--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,14 +4,14 @@
 		<meta charset="UTF-8">
 		<meta name="language" content="fr">
 		<meta name="robots" content="index, follow">
-		<meta name="created" content="2023-08-24">
-		<meta name="image" content="https://scriptzenit.fr/img/logo.png">
+		<meta name="created" content="21-01-2025">
+		<meta name="image" content="https://scriptzenit.fr/img/moi2.jpg">
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<meta name="description" content="Découvrez les services de ScriptZenIT : spécialistes en création de sites internet et d'applications de qualité. De la conception ergonomique au développement technique, on vous accompagne pour donner vie à vos idées en ligne."/>
-		<meta name="keywords" content="création site web, développement web, conception site internet, design web, identité numérique, conseils site internet, agence web, applications web, sites responsives, UX/UI, développement d'applications, solutions digitales"/>
+		<meta name="description" content="{{ 'site_description'|trans }}"/>
+		<meta name="keywords" content="{{ 'keywords_site'|trans }}"/>
 		<meta content="Walid BELBECHE" name="author"/>
 		<title>
-			{% block title %}ScriptZenIT - Création de Sites Internet et Applications de Qualité
+			{% block title %}{{ 'site_title'|trans }} - {{ 'site_description'|trans }}
 			{% endblock %}
 		</title>
 		<!-- Favicon -->
