--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -64,7 +64,9 @@
             <div class="container">
                 {% for type, messages in app.flashes %}
                     {% for message in messages %}
-                        <div class="alert alert-{{ type }}">{{ message }}</div>
+                        <div class="alert alert-{{ type }}">
+                            {{ message|trans }}
+                        </div>
                     {% endfor %}
                 {% endfor %}
             </div>
