--- a/templates/front/includes/nav.html.twig
+++ b/templates/front/includes/nav.html.twig
@@ -26,10 +26,7 @@
         <!-- Logo -->
         <div class="logo">
             <a href="{{ url('front_home') }}">
-                <img src="{{ asset('img/logo.png') }}" class="d-sm-none d-md-none d-lg-block ml-5" width="250" alt="{{ 'logo_alt'|trans }}">
-            </a>
-            <a href="{{ url('front_home') }}">
-                <div class="text-white d-md-block d-lg-none d-sm-block fw-bold" style="font-size: 1rem;margin-left: 21px!important;">{{ 'site_name'|trans }}</div>
+                <div class="text-white d-md-block d-sm-block fw-bold" style="font-size: 1rem;margin-left: 21px!important;">{{ 'site_name'|trans }}</div>
             </a>
         </div>
 
