--- a/templates/front/contact/index.html.twig
+++ b/templates/front/contact/index.html.twig
@@ -103,15 +103,16 @@
             const result = await response.json();
 
             if (response.ok) {
-                alert(result.message);
+                alert('{{ 'contact_form_success_message'|trans }}'); // Success message
                 form.reset();
             } else {
-                alert('{{ 'contact_form_error_message'|trans }}');
+                alert('{{ 'contact_form_error_message'|trans }}'); // Error message
             }
         } catch (error) {
-            alert('{{ 'contact_form_error_message'|trans }}');
+            alert('{{ 'contact_form_error_message'|trans }}'); // Error message
         }
     });
 </script>
+
 
 {% endblock %}
